--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "issue_tracker": "https://github.com/uvejota/homeassistant-edata/issues",
   "dependencies": [],
   "codeowners": [],
-  "requirements": ["e-data>=0.1.7", "python-dateutil"],
-  "version": "0.0.1",
+  "requirements": ["e-data==0.1.8", "python-dateutil"],
+  "version": 0.1,
   "iot_class": "cloud_polling"
 }
