--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "documentation": "https://github.com/uvejota/homeassistant-edata/",
   "issue_tracker": "https://github.com/uvejota/homeassistant-edata/issues",
   "dependencies": [],
-  "codeowners": [],
-  "requirements": ["e-data==0.2.9", "python-dateutil"],
-  "version": 0.1,
+  "codeowners": ["@uvejota"],
+  "requirements": ["e-data==0.2.10", "python-dateutil"],
+  "version": "0.1.7",
   "iot_class": "cloud_polling"
 }
