--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "issue_tracker": "https://github.com/uvejota/homeassistant-edata/issues",
   "dependencies": ["recorder"],
   "codeowners": ["@uvejota"],
-  "requirements": ["e-data==0.3.7", "python-dateutil"],
+  "requirements": ["e-data==0.3.7", "python-dateutil==2.8.2"],
   "version": "2021.12.2",
-  "iot_class": "cloud_polling"
+  "iot_class": "cloud_polling",
+  "config_flow": true
 }
