--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
     "issue_tracker": "https://github.com/uvejota/homeassistant-edata/issues",
     "dependencies": ["recorder"],
     "codeowners": ["@uvejota"],
-    "requirements": ["e-data==0.3.9", "python-dateutil==2.8.2", "numpy>=1.21.4"],
-    "version": "2021.12.2",
+    "requirements": ["e-data==0.4.0", "python-dateutil>=2.8.2"],
+    "version": "2022.09.0",
     "iot_class": "cloud_polling",
     "config_flow": true
 }
