--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "dependencies": ["recorder"],
     "codeowners": ["@uvejota"],
     "requirements": ["e-data==1.0.0.dev0", "python-dateutil>=2.8.2"],
-    "version": "2022.11.2.dev",
+    "version": "2022.11.2",
     "iot_class": "cloud_polling",
     "config_flow": true
 }
