--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Download repo
         uses: actions/checkout@v2
 
-      - name: Create token_extractor.zip
+      - name: Create zip
         run: |
           zip homeassistant-edata.zip -r ./custom_components/edata
 
