--- a/custom_components/edata/manifest.json
+++ b/custom_components/edata/manifest.json
@@ -1,19 +1,19 @@
 {
     "domain": "edata",
     "name": "e-data",
-    "documentation": "https://github.com/uvejota/homeassistant-edata/",
-    "issue_tracker": "https://github.com/uvejota/homeassistant-edata/issues",
-    "dependencies": [
-        "recorder"
-    ],
     "codeowners": [
         "@uvejota"
     ],
+    "config_flow": true,
+    "dependencies": [
+        "recorder"
+    ],
+    "documentation": "https://github.com/uvejota/homeassistant-edata/",
+    "iot_class": "cloud_polling",
+    "issue_tracker": "https://github.com/uvejota/homeassistant-edata/issues",
     "requirements": [
         "e-data==1.1.5",
         "python-dateutil>=2.8.2"
     ],
-    "version": "2023.06.3",
-    "iot_class": "cloud_polling",
-    "config_flow": true
+    "version": "2023.06.3"
 }
