--- a/custom_components/edata/manifest.json
+++ b/custom_components/edata/manifest.json
@@ -3,7 +3,7 @@
   "name": "e-data",
   "codeowners": ["@uvejota"],
   "config_flow": true,
-  "dependencies": ["recorder"],
+  "dependencies": ["lovelace", "recorder"],
   "documentation": "https://github.com/uvejota/homeassistant-edata/",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/uvejota/homeassistant-edata/issues",
